# chip8-rs

./: Cargo.toml  README.md  stress_test_log.txt
.github/workflows/: rust.yml
src/: actions.rs  app.rs  audio.rs  browser.rs  chip8.rs  chip8_tui.rs  component.rs  config_file.rs  config_manager.rs  constants.rs  file_browser.rs  main.rs  menu.rs  performance_metrics.rs  rom_history.rs  settings.rs  split_view_component.rs
src/chip8/: cpu.rs  display.rs  error.rs  input.rs  memory.rs  mod.rs  opcodes.rs
src/settings/: emulator_settings.rs  key_bindings.rs  mod.rs  numeric_setting.rs  setting_item.rs
