[package]
name = "chip8-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
minifb = "0.28.0"
crossterm = "0.29.0"
ratatui = "0.29.0"
tui = "0.19.0"
color-eyre = "0.6.5"
home = "0.5.11"
serde = { version = "1.0.219", features = ["derive"]}
toml = "0.9.5"
anyhow = "1.0.99"
rodio = "0.21.1"
bincode = { version = "2.0.1", features = ["serde"]}
chrono = "0.4.41"
